--- a/.github/workflows/yaml-validator.yml
+++ b/.github/workflows/yaml-validator.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Kubernetes yaml validation by kubeval
         uses: makocchi-git/actions-k8s-manifests-validate-kubeval@v1.0.1
         with:
-          files: difinition,resources
+          files: definition,resources
           token: ${{ secrets.GITHUB_TOKEN }}
